--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,12 @@
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
+
 http {
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -18,7 +27,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         location / {
-            proxy_pass http://127.0.0.1:8000;
+            proxy_pass http://127.0.0.1:8000/;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,7 +39,6 @@ http {
             proxy_set_header Connection $connection_upgrade;
 
             proxy_buffering off;
-
         }
     }
 }
