--- a/nginx.conf
+++ b/nginx.conf
@@ -1,44 +1,55 @@
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+   worker_connections 1024;
 }
 
 http {
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
+   map $http_upgrade $connection_upgrade {
+      default upgrade;
+      '' close;
+   }
 
-    server {
-        listen 80;
-        server_name notebook.aminnez.com;
-        return 301 https://$host$request_uri;
-    }
+   server {
+      listen 80;
+      server_name notebook.aminnez.com;
+      return 301 https://$host$request_uri;
+   }
 
-    server {
-        listen 443 ssl;
-        server_name notebook.aminnez.com;
+# HTTPS server to handle JupyterHub
+   server {
+      listen 443 ssl http2;
+      server_name notebook.aminnez.com;
 
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+      # SSL Configuration
+      ssl_certificate /etc/nginx/ssl/fullchain.pem;
+      ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+      ssl_prefer_server_ciphers on;
+      ssl_ciphers HIGH:!aNULL:!MD5;
+      ssl_session_timeout 1d;
+      ssl_session_cache shared:SSL:50m;
+      ssl_stapling on;
+      ssl_stapling_verify on;
+      add_header Strict-Transport-Security max-age=15768000;
 
-        location / {
-            proxy_pass http://127.0.0.1:8000/;
+         # Managing literal requests to the JupyterHub frontend
+         location / {
+            proxy_pass http://jupyterbook-hub:8000/;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
+            
             # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-
+            
             proxy_buffering off;
-        }
-    }
+      }
+   }
 }
