--- a/nginx.conf
+++ b/nginx.conf
@@ -15,14 +15,14 @@ http {
 
    server {
       listen 80;
-      server_name notebook.aminnez.com;
+      server_name example.com;
       return 301 https://$host$request_uri;
    }
 
 # HTTPS server to handle JupyterHub
    server {
       listen 443 ssl http2;
-      server_name notebook.aminnez.com;
+      server_name example.com;
 
       # SSL Configuration
       ssl_certificate /etc/nginx/ssl/fullchain.pem;
