feat: refactor whole project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ./data:/home
     env_file:
       - .env
+    ports:
+      - "8000:8000"
     networks:
       - jupyterbook-network
 
